--- a/app/src/main/res/menu/toolbar_actions.xml
+++ b/app/src/main/res/menu/toolbar_actions.xml
@@ -25,4 +25,9 @@
         android:id="@+id/action_about"
         android:title="@string/about"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_reset"
+        android:title="Reset to Default"
+        app:showAsAction="never" />
 </menu>
